Issue #12124: zipimport doesn't keep a reference to zlib.decompress() anymore to be able to unload the module.